# seqMAE

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
run_scripts/: run_scb_TFs.py  run_scb_pretrain.py
src/scb_multiome/: __init__.py
src/scb_multiome/core/: __init__.py  _testPretrainShareSeq.py  base_model.py  scb_TFs.py  scb_TFs_chip.py  scb_pretrain.py  scbasset_orig.py
src/scb_multiome/data/: download.py
src/scb_multiome/preprocessing/: __init__.py  other_pp.py  pwms.py
src/scb_multiome/utils/: IOs.py  __init__.py  benchmark.py  eval_metrics.py  gradients.py  logistic_regression.py  scb_blocks.py  tf_activity.py  tf_activity_allcells.py
src/seqMAE/: __init__.py
src/seqMAE/core/: __init__.py  base_model.py  cnn_classifier.py  scb_TFs.py  scb_pretrain.py
src/seqMAE/data/: __init__.py  download.py
src/seqMAE/preprocessing/: scbasset_pp.py
src/seqMAE/utils/: IOs.py  scb_blocks.py  train_utils.py
tutorials/pbmc_10k/: preprocess.ipynb
tutorials/pbmc_10k/trials/TFs_scb_pretrain_intercept_scaled/: benchmark.ipynb  config.json  performance.ipynb  run.sh
tutorials/pbmc_10k/trials/scb_pretrain_intercept/: config.json  run.sh
